# Xfce-Theme-Manager

./: .gitignore  ChangeLog  INSTALL  INSTALL.es  Makefile  Makefile.am  Makefile.in  README  README.de  README.es  Xfce-Theme-Manager.LFSBuild  Xfce-Theme-Manager.desktop  Xfce-Theme-Manager.main  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  helptranslations  main.inc  makepkg  remakesourcelist  translations  xfce-theme-manager.1  xfce-theme-manager.xcf
DEVDATA/: makepkg  outman.1  runconvert  sedconvert.sh  xfce-theme-manager.1
DEVDATA/SlackBuild/: autotools-template.SlackBuild
DEVDATA/SlackBuild/Xfce-Theme-Manager/: Xfce-Theme-Manager.SlackBuild  Xfce-Theme-Manager.info
DEVDATA/XfceThemeManagerLFSPKGBuild/: Xfce-Theme-Manager.LFSBuild
MakeTransList/: Makefile  converthelptostring  translate.cpp  translatehelp.cpp
Xfce-Theme-Manager/: flagsandlibs  slack-desc  sources
Xfce-Theme-Manager-binarys/32bit/: xfce-theme-manager
Xfce-Theme-Manager-binarys/64bit/: install.sh  xfce-theme-manager
Xfce-Theme-Manager/app/: Makefile  Makefile.am  Makefile.in  xfce-theme-manager
Xfce-Theme-Manager/app/.deps/: xfcethememanager-callbacks.Po  xfcethememanager-database.Po  xfcethememanager-globals.Po  xfcethememanager-gui.Po  xfcethememanager-main.Po  xfcethememanager-thumbnails.Po
Xfce-Theme-Manager/resources/docs/: README  README.de  README.es  README.pl
Xfce-Theme-Manager/resources/man/: xfce-theme-manager.1  xfce-theme-manager.1.de  xfce-theme-manager.1.es  xfce-theme-manager.1.fr  xfce-theme-manager.1.pl
Xfce-Theme-Manager/resources/pixmaps/: Xfce-Theme-Manager.desktop
Xfce-Theme-Manager/resources/scripts/: RandomAll  RandomGTK  RandomTheme  RandomWMBorder  RandomWallpaper  SequentialGTK  SequentialIcons  SequentialTheme  SequentialWMBorder  SequentialWallpaper
Xfce-Theme-Manager/src/: callbacks.cpp  callbacks.h  cli.cpp  cli.h  database.cpp  database.h  globals.cpp  globals.h  gui.cpp  gui.h  internet.cpp  internet.h  main.cpp  panels.cpp  panels.h  thumbnails.cpp  thumbnails.h
XfceThemeManager/: Xfce-Theme-Manager.LFSBuild
autom4te.cache/: output.1  requests  traces.0  traces.1
docs/: index.html
gtkpreview/: Makefile  database.cpp  database.h  globals.cpp  globals.h  main.cpp  thumbnails.cpp  thumbnails.h
slackbuild/: Xfce-Theme-Manager.SlackBuild  Xfce-Theme-Manager.info  Xfce-Theme-Manager.slackbuild
slackbuild/Xfce-Theme-Manager/: README  Xfce-Theme-Manager.SlackBuild  Xfce-Theme-Manager.info  slack-desc
src/: callbacks.cpp  callbacks.h  database.cpp  database.h  globals.cpp  globals.h  gui.cpp  gui.h  main.cpp  thumbnails.cpp  thumbnails.h  translate
translate/: Makefile  translate.cpp  translations
